# todolist-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.e2e.yml  docker-compose.yml
.github/workflows/: ci.yml
agent-service/: .dockerignore  Dockerfile  pyproject.toml
agent-service/app/: agent.py  auth.py  history_models.py  history_repository.py  history_service.py  main.py  prompts.py  schemas.py  tools.py
agent-service/app/llm/: __init__.py  base.py  config.py  factory.py  providers.py
agent-service/tests/: conftest.py  test_agent.py  test_api.py  test_auth.py  test_ci_contract.py  test_durable_stream.py  test_history_api.py  test_history_repository.py  test_lifespan_recovery.py  test_llm_config.py  test_llm_factory.py  test_schemas.py  test_tools.py  test_trusted_auth_api.py
backend/: .dockerignore  Dockerfile  go.mod  go.sum
backend/cmd/server/: main.go  main_test.go
data/: e2e-init.sql  init.sql
docs/: AGENT_PROMPT.md  API.md  ARCHITECTURE.md  DATABASE.md  DEPLOY.md  PRD.md  STATUS.md  WORKFLOW.md
docs/qa/: e2e-matrix.md  experience-report.json  release-checklist.md  visual-review.md
frontend/: .dockerignore  .env.development.example  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
frontend/e2e/: global.setup.ts
frontend/scripts/: experience-gate-lib.mjs  experience-gate.mjs  experience-gate.test.mjs
frontend/src/: App.tsx  index.css  main.tsx  testUtils.tsx  vitest.setup.ts
scripts/: e2e-real.sh  migrate.sql  verify-compose-security.py
(+187 files in other folders)
