[project]
name = "agent-service"
version = "0.1.0"
description = "Agent TodoList - Python Agent Service (LangChain + LangGraph + FastAPI)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "httpx>=0.28.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "langchain-google-genai>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v", "--cov=app", "--cov-report=term-missing"]
